added buttons and new logo

--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="main.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://use.fontawesome.com/c96e8cb192.js"></script>
 	<title>test</title>
 </head>
 <body>
@@ -73,6 +74,17 @@
 
 	<p>Donec congue magna ligula, nec dignissim mi tristique sed. Aenean non metus sit amet tellus mollis luctus. Integer viverra vel velit at malesuada. Morbi eu urna facilisis, lobortis massa pharetra, egestas quam. Donec eget faucibus odio. Vestibulum in nisi vel diam dapibus iaculis at quis velit. Proin vehicula libero at libero hendrerit, in lacinia ex fermentum. Morbi hendrerit leo vitae tempor dictum. Aliquam nisl justo, efficitur sit amet libero blandit, pharetra accumsan diam. Suspendisse potenti. In ipsum nibh, fermentum eget accumsan consectetur, varius vel enim. Nullam sodales leo metus, in bibendum felis dapibus vel. Nulla facilisi. Aenean vel tempor mi, et tempor libero.</p>
 
+</div>
+<a href = main.html> <img class = bottom_logo src=kc.png>
+</a>
+<p></p>
+
+
+<!-- buttons -->
+<div class = social_media>
+	<a id = in-button class="btn btn-social-icon btn-lg btn-linkedin" href = "https://www.linkedin.com/in/kevinchow31/"><i class = "fa fa-linkedin-square"></i></a>
+	<a id = fb-button class= "btn btn-social-icon btn-lg btn-facebook" href = "https://www.facebook.com/kevin.chow.5099"><i class = "fa fa-facebook-square"></i></a>
+	<a id = git-button class= "btn btn-social-icon btn-lg btn-github-square" href = "https://github.com/kc31?tab=overview&from=2017-05-08"><i class = "fa fa-github"></i></a>
 </div>
 </body>
 </html>
