--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <link rel="stylesheet" type="text/css" href="main.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<script type = "text/javascript" src="jquery-3.2.1"></script>
-<script src="https://use.fontawesome.com/c96e8cb192.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script src="main.js"></script>
 	<title>test</title>
 </head>
 <body>
