--- a/index.html
+++ b/index.html
@@ -1,43 +1,43 @@
 <!DOCTYPE html>
-<html>
 <head>
-<link rel="stylesheet" type="text/css" href="main.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-<script src="main.js"></script>
-	<title>test</title>
+	<title>Full Screen Landing Page</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+  	<script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+  	<script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+	<link href="css/animate.css" rel="stylesheet"/>
+	<link href="css/waypoints.css" rel="stylesheet"/>
+	<script src="js/jquery.waypoints.min.js" type="text/javascript"></script>
+	<script src="js/waypoints.js" type="text/javascript"></script>
 </head>
 <body>
+	<div class="img1">
+		<p id="welcome_sign" class="os-animation" data-os-animation="bounceInUp" data-os-animation="1.5s">welcome</p>
+	</div>
+	<section class="section">
+		<p class="section_title">introduction</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque volutpat sollicitudin ullamcorper. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus viverra arcu et elit tristique, a eleifend enim volutpat. Vestibulum vel velit ex. Maecenas vel rhoncus tortor. Nulla ipsum sem, sodales vitae vulputate sit amet, aliquam in eros. Integer vestibulum elit ut nibh facilisis, a accumsan justo feugiat. Sed lobortis rutrum sapien et sodales. Vivamus ornare pretium lacus, eu tempor felis lacinia vel. Maecenas tellus velit, pellentesque ullamcorper rutrum non, rhoncus vel nisl.Maecenas leo elit, pulvinar eget nisi sit amet, tristique porta ex. Vestibulum porttitor elit at congue consequat. Cras vitae urna augue. Nunc suscipit eu lectus vel posuere. Morbi faucibus arcu ac mi volutpat gravida. Quisque volutpat urna tortor, nec tincidunt justo ornare ut. Nulla in convallis dui. Sed et tellus et nisl sollicitudin luctus. Suspendisse consequat non lectus eget ongue lorem et ipsum volutpat, ut porta lacus ornare. Nunc dapibus ut nisi accumsan pulvinar. Mauris vitae sodales mi.</p>
+	</section>
+	<div class="img2">
+		<span class="border">
+			hello2
+		</span>
+	</div>
+	<section class="section">
+		<p class="section_title">section 1</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque volutpat sollicitudin ullamcorper. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus viverra arcu et elit tristique, a eleifend enim volutpat. Vestibulum vel velit ex. Maecenas vel rhoncus tortor. Nulla ipsum sem, sodales vitae vulputate sit amet, aliquam in eros. Integer vestibulum elit ut nibh facilisis, a accumsan justo feugiat. Sed lobortis rutrum sapien et sodales. Vivamus ornare pretium lacus, eu tempor felis lacinia vel. Maecenas tellus velit, pellentesque ullamcorper rutrum non, rhoncus vel nisl.Maecenas leo elit, pulvinar eget nisi sit amet, tristique porta ex. Vestibulum porttitor elit at congue consequat. Cras vitae urna augue. Nunc suscipit eu lectus vel posuere. Morbi faucibus arcu ac mi volutpat gravida. Quisque volutpat urna tortor, nec tincidunt justo ornare ut. Nulla in convallis dui. Sed et tellus et nisl sollicitudin luctus. Suspendisse consequat non lectus eget pellentesque. Duis diam diam, luctus vel ipsum nec, auctor auctor diam.Ut nec urna varius, interdum odio eget, tristique leo. Proin id vehicula eros, a blandit ex. Etiam in lobortis ipsum, eget ornare mauris. Fusce vitae lorem vel nisi interdum commodo. Nam tincidunt nec metus nec luctus. Aenean dictum ornare mi, ut dapibus metus blandit vel. Praesent euismod, lacus quis feugiat posuere, nisi mi condimentum nunc, venenatis iaculis turpis lorem ac tortor.ae; Ut congue lorem et ipsum volutpat, ut porta lacus ornare. Nunc dapibus ut nisi accumsan pulvinar. Mauris vitae sodales mi. </p>
+	</section>
+	<div class="img3">
+		<span class="border">
+			hello3
+		</span>
+	</div>
 
-
-<!-- MAIN VIDEO-->
-<!-- 
-<video class = main_video autoplay="true" loop>
- <source src="cloud_timelapse.webm" type="video/mp4">
-</video> -->
-
-<!-- MAIN SHIT -->
-<div class=main>
-	<p id = "fixedme" > <img src = "fixedme.jpeg" height = "5%" width = "25%"> </p>
-		<p> Hi.</p>
-		<p> I'm Kevin Chow</p>
-		<p> I'm from Markham currently attending University of Waterloo for Computer Science</p>
-		<p> I'm a big fan of kpop and shit</p>
-
-
-<a href = main.html> <img class = bottom_logo src=kc.png>
-</a>
-<p></p>
-
-
-<!-- buttons -->
-<div class = social_media>
-<p>
-	<a id = in-button class="btn btn-social-icon btn-lg btn-linkedin" href = "https://www.linkedin.com/in/kevinchow31/"><i class = "fa fa-linkedin-square"></i></a>
-	<a id = fb-button class= "btn btn-social-icon btn-lg btn-facebook" href = "https://www.facebook.com/kevin.chow.5099"><i class = "fa fa-facebook-square"></i></a>
-	<a id = git-button class= "btn btn-social-icon btn-lg btn-github-square" href = "https://github.com/kc31?tab=overview&from=2017-05-08"><i class = "fa fa-github"></i></a>
-</p>
-</div>
-</div>
+	<section class="section">
+		<p class="section_title">section 2</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque volutpat sollicitudin ullamcorper. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus viverra arcu et elit tristique, a eleifend enim volutpat. Vestibulum vel velit ex. Maecenas vel rhoncus tortor. Nulla ipsum sem, sodales vitae vulputate sit amet, aliquam in eros. Integer vestibulum elit ut nibh facilisis, a accumsan justo feugiat. Sed lobortis rutrum sapien et sodales. Vivamus ornare pretium lacus, eu tempor felis lacinia vel. Maecenas tellus velit, pellentesque ullamcorper rutrum non, rhoncus vel nisl.Maecenas leo elit, pulvinar eget nisi sit amet, tristique porta ex. Vestibulum porttitor elit at congue consequat. Cras vitae urna augue. Nunc suscipit eu lectus vel posuere. Morbi faucibus arcu ac mi volutpat gravida. Quisque volutpat urna tortor, nec tincidunt justo ornare ut. Nulla in convallis dui. Sed et tellus et nisl sollicitudin luctus. Suspendisse consequat non lectus eget nte ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut congue lorem et ipsum volutpat, ut porta lacus ornare. Nunc dapibus ut nisi accumsan pulvinar. Mauris vitae sodales mi. </p>
+	</section>
 </body>
 </html>
